// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. group of topics 1`] = `
<View>
  <View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      focusable={true}
    >
      <View>
        <Text
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityTraits="button"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
        >
          Football
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      focusable={true}
    >
      <View>
        <Text
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityTraits="button"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
        >
          Manchester United FC
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      focusable={true}
    >
      <View>
        <Text
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityTraits="button"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
        >
          Chelsea FC
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      focusable={true}
    >
      <View>
        <Text
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityTraits="button"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
        >
          Arsenal
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      focusable={true}
    >
      <View>
        <Text
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityTraits="button"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
        >
          Rugby Union
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. onpress handler is called with the expected args 1`] = `
Array [
  Array [
    "event",
    Object {
      "name": "Football",
      "slug": "football",
    },
  ],
]
`;

exports[`3. onpress sends analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "Article",
    },
  ],
  Array [
    Object {
      "action": "Pressed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
        "name": "Football",
        "slug": "football",
      },
      "component": "TopicLink",
      "object": "Article",
    },
  ],
]
`;

exports[`4. article topic 1`] = `
<View>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    focusable={true}
  >
    <View>
      <Text
        accessibilityComponentType="button"
        accessibilityRole="button"
        accessibilityTraits="button"
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;
